# bitgrinder

./: .gitignore  CMakeLists.txt  README.md  makefile  readme.md  setup  vgcheck.sh
prereqs/akumuli/: CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  CTestTestfile.cmake  Makefile  cmake_install.cmake  install_manifest.txt
prereqs/akumuli/akumulid/: Makefile  akumulid  cmake_install.cmake
prereqs/akumuli/functests/: Makefile  cmake_install.cmake  storage_test
prereqs/akumuli/fuzzers/: Makefile  cmake_install.cmake
prereqs/akumuli/libakumuli/: Makefile  cmake_install.cmake  libakumuli.so.0
prereqs/akumuli/perftests/: Makefile  cmake_install.cmake
prereqs/akumuli/unittests/: CTestTestfile.cmake  Makefile  cmake_install.cmake  test_blockstore  test_column_store  test_compression  test_cursor  test_datetime  test_nbtree  test_protocolparser  test_querycursor  test_respstream  test_sax  test_seriesparser  test_streams  test_tcp_server  test_util
prereqs/apache-log4cxx-0.10.0/: Makefile  config.status  libtool
prereqs/apache-log4cxx-0.10.0/autom4te.cache/: requests  traces.0
prereqs/apache-log4cxx-0.10.0/src/: Makefile
prereqs/apache-log4cxx-0.10.0/src/examples/: Makefile
prereqs/apache-log4cxx-0.10.0/src/examples/cpp/: Makefile
prereqs/apache-log4cxx-0.10.0/src/main/: Makefile
prereqs/apache-log4cxx-0.10.0/src/main/cpp/: Makefile  inputstreamreader.loT
prereqs/apache-log4cxx-0.10.0/src/main/cpp/.deps/: action.Plo  appenderattachableimpl.Plo  appenderskeleton.Plo  aprinitializer.Plo  asyncappender.Plo  basicconfigurator.Plo  bufferedwriter.Plo  bytearrayinputstream.Plo  bytearrayoutputstream.Plo  bytebuffer.Plo  cacheddateformat.Plo  charsetdecoder.Plo  charsetencoder.Plo  class.Plo  classnamepatternconverter.Plo  classregistration.Plo  condition.Plo  configurator.Plo  consoleappender.Plo  cyclicbuffer.Plo  dailyrollingfileappender.Plo  datagrampacket.Plo  datagramsocket.Plo  date.Plo  dateformat.Plo  datelayout.Plo  datepatternconverter.Plo  defaultconfigurator.Plo  defaultloggerfactory.Plo  defaultrepositoryselector.Plo  domconfigurator.Plo  exception.Plo  fallbackerrorhandler.Plo  file.Plo  fileappender.Plo  filedatepatternconverter.Plo  fileinputstream.Plo  filelocationpatternconverter.Plo  fileoutputstream.Plo  filerenameaction.Plo  (+11 more)
prereqs/apache-log4cxx-0.10.0/src/main/include/: Makefile
prereqs/apache-log4cxx-0.10.0/src/main/include/log4cxx/: Makefile
prereqs/apache-log4cxx-0.10.0/src/main/include/log4cxx/config/: Makefile
prereqs/apache-log4cxx-0.10.0/src/main/include/log4cxx/db/: Makefile
prereqs/apache-log4cxx-0.10.0/src/main/include/log4cxx/filter/: Makefile
prereqs/apache-log4cxx-0.10.0/src/main/include/log4cxx/helpers/: Makefile
prereqs/apache-log4cxx-0.10.0/src/main/include/log4cxx/net/: Makefile
prereqs/apache-log4cxx-0.10.0/src/main/include/log4cxx/nt/: Makefile
prereqs/apache-log4cxx-0.10.0/src/main/include/log4cxx/pattern/: Makefile
prereqs/apache-log4cxx-0.10.0/src/main/include/log4cxx/private/: Makefile
prereqs/apache-log4cxx-0.10.0/src/main/include/log4cxx/rolling/: Makefile
prereqs/apache-log4cxx-0.10.0/src/main/include/log4cxx/spi/: Makefile
prereqs/apache-log4cxx-0.10.0/src/main/include/log4cxx/spi/location/: Makefile
prereqs/apache-log4cxx-0.10.0/src/main/include/log4cxx/varia/: Makefile
prereqs/apache-log4cxx-0.10.0/src/main/include/log4cxx/xml/: Makefile
prereqs/apache-log4cxx-0.10.0/src/site/: Makefile
prereqs/apache-log4cxx-0.10.0/src/site/doxy/: Doxyfile  Makefile
prereqs/apache-log4cxx-0.10.0/src/test/: Makefile
prereqs/apache-log4cxx-0.10.0/src/test/cpp/: Makefile
prereqs/apache-log4cxx-0.10.0/src/test/resources/: Makefile
prereqs/apache-log4cxx-0.10.0/src/test/resources/input/: Makefile
prereqs/apache-log4cxx-0.10.0/src/test/resources/input/ndc/: Makefile
prereqs/apache-log4cxx-0.10.0/src/test/resources/input/rolling/: Makefile
prereqs/apache-log4cxx-0.10.0/src/test/resources/input/xml/: Makefile
prereqs/apache-log4cxx-0.10.0/src/test/resources/witness/: Makefile
prereqs/apache-log4cxx-0.10.0/src/test/resources/witness/encoding/: Makefile
prereqs/apache-log4cxx-0.10.0/src/test/resources/witness/ndc/: Makefile
prereqs/apache-log4cxx-0.10.0/src/test/resources/witness/rolling/: Makefile
prereqs/boost_1_54_0/: project-config.jam.1
prereqs/boost_1_54_0/bin.v2/: project-cache.jam
prereqs/boost_1_54_0/bin.v2/standalone/ac/gcc-4.9.2/release/link-static/threading-multi/: z
prereqs/boost_1_54_0/bin.v2/standalone/ac/gcc-4.9.2/release/threading-multi/: z
prereqs/boost_1_54_0/bin.v2/standalone/ac/gcc-7.3.0/release/link-static/threading-multi/: z
prereqs/boost_1_54_0/bin.v2/standalone/ac/gcc-7.3.0/release/threading-multi/: z
prereqs/boost_1_54_0/stage/lib/: libboost_filesystem.so.1.54.0  libboost_math_c99l.so.1.54.0  libboost_math_tr1f.so.1.54.0
src/: bitgrinder.cpp  btgmonitor.cpp  console.cpp  statmon.cpp
src/exchange/: apiscrape.cpp  exchange.cpp  gateio.cpp  position.cpp
src/include/: bitgrinder.h  bitgrinder.hpp  btgmonitor.h  console.h  console.hpp
src/include/exchange/: apiscrape.h  apiscrape.hpp  exchange.h  exchange.hpp  gateio.h  gateio.hpp  position.h  position.hpp
src/include/system/: config.h  config.hpp  conparse.h  data.h  data.hpp  logging.hpp  systatus.h  tinyfsm.hpp  tradedata.h  tradedata.hpp
src/math/: analysis.cpp
src/system/: config.cpp  conparse.cpp  data.cpp  logging.cpp  systatus.c  systatus.cpp  tradedata.cpp
